[gd_scene load_steps=21 format=3 uid="uid://dt17otd3o4hi5"]

[ext_resource type="Script" path="res://Player/player.gd" id="1_2c7p4"]
[ext_resource type="Texture2D" uid="uid://df5nankuxmk2f" path="res://Art/Player/16x16DesereV2.png" id="2_qokcj"]
[ext_resource type="Script" path="res://Player/attack.gd" id="3_0ke2h"]
[ext_resource type="PackedScene" uid="uid://dbwxxmmfrndyu" path="res://Player/Dash/dash_attack.tscn" id="3_80to3"]
[ext_resource type="AudioStream" uid="uid://cwjowkevrtgue" path="res://Sounds/dash1.wav" id="5_gw4xp"]

[sub_resource type="Animation" id="Animation_taj8c"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2i(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("attack:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_d4wc2"]
resource_name = "dashDown"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [16]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("attack:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_7qpay"]
resource_name = "dashLeft"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [18]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("attack:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.5708]
}

[sub_resource type="Animation" id="Animation_v0nhk"]
resource_name = "dashRight"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [17]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("attack:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-1.5708]
}

[sub_resource type="Animation" id="Animation_2yggd"]
resource_name = "dashUp"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [19]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("attack:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [3.14159]
}

[sub_resource type="Animation" id="Animation_y0bsy"]
resource_name = "walkDown"
length = 0.9
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0), Vector2i(3, 0)]
}

[sub_resource type="Animation" id="Animation_bas24"]
resource_name = "walkLeft"
length = 0.9
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 2), Vector2i(1, 2), Vector2i(2, 2), Vector2i(3, 2)]
}

[sub_resource type="Animation" id="Animation_nkgvv"]
resource_name = "walkRight"
length = 0.9
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 1), Vector2i(1, 1), Vector2i(2, 1), Vector2i(3, 1)]
}

[sub_resource type="Animation" id="Animation_qrxhs"]
resource_name = "walkUp"
length = 0.9
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2i(0, 3), Vector2i(1, 3), Vector2i(2, 3), Vector2i(3, 3)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qlhdt"]
_data = {
"RESET": SubResource("Animation_taj8c"),
"dashDown": SubResource("Animation_d4wc2"),
"dashLeft": SubResource("Animation_7qpay"),
"dashRight": SubResource("Animation_v0nhk"),
"dashUp": SubResource("Animation_2yggd"),
"walkDown": SubResource("Animation_y0bsy"),
"walkLeft": SubResource("Animation_bas24"),
"walkRight": SubResource("Animation_nkgvv"),
"walkUp": SubResource("Animation_qrxhs")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3tj0u"]
size = Vector2(12, 12)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rkpfv"]
size = Vector2(17.5, 17)

[sub_resource type="Animation" id="Animation_l55ae"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.333333, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_nn7nf"]
resource_name = "hurtBlink"
length = 0.4
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.333333, 0, 0, 0.501961), Color(0.643137, 0.00784314, 0, 0.501961)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qflol"]
_data = {
"RESET": SubResource("Animation_l55ae"),
"hurtBlink": SubResource("Animation_nn7nf")
}

[node name="Player" type="CharacterBody2D"]
texture_filter = 1
collision_layer = 17
script = ExtResource("1_2c7p4")
speed = 90

[node name="attack" type="Node2D" parent="."]
script = ExtResource("3_0ke2h")

[node name="dashAttack" parent="attack" instance=ExtResource("3_80to3")]

[node name="Sprite2D" type="Sprite2D" parent="."]
clip_children = 2
position = Vector2(0, 17)
texture = ExtResource("2_qokcj")
offset = Vector2(0, -20)
hframes = 4
vframes = 5

[node name="ColorRect" type="ColorRect" parent="Sprite2D"]
offset_left = -11.0
offset_top = -38.0
offset_right = 11.0
offset_bottom = -3.0
color = Color(0.333333, 0, 0, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_qlhdt")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 5)
shape = SubResource("RectangleShape2D_3tj0u")

[node name="hurtBox" type="Area2D" parent="."]
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtBox"]
position = Vector2(0, 4.5)
shape = SubResource("RectangleShape2D_rkpfv")

[node name="hurtAnimation" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite2D/ColorRect")
libraries = {
"": SubResource("AnimationLibrary_qflol")
}

[node name="hurtTimer" type="Timer" parent="."]
one_shot = true

[node name="SoundManager" type="Node2D" parent="."]

[node name="dash1" type="AudioStreamPlayer2D" parent="SoundManager"]
stream = ExtResource("5_gw4xp")
volume_db = 10.0

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="area_entered" from="hurtBox" to="." method="_on_hurt_box_area_entered"]
[connection signal="area_exited" from="hurtBox" to="." method="_on_hurt_box_area_exited"]
